# CFIE

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
assets/datasets/: predictor_public_domain_sources.json  predictor_public_domain_texts.jsonl
cfie/: __init__.py  _aiter_ops.py  _custom_ops.py  _oink_ops.py  _version.py  _xpu_ops.py  beam_search.py  connections.py  envs.py  forward_context.py  logger.py  logits_process.py  outputs.py  pooling_params.py  sampling_params.py  scalar_type.py  sequence.py
cfie/api/: local_server.py  protocol.py  streamer.py
cfie/assets/: base.py
cfie/cfie_flash_attn/: __init__.py  flash_attn_interface.py
cfie/cli/: main.py  native_chat.py  native_generate.py  run_local.py  serve.py
cfie/compilation/: backends.py  caching.py  compiler_interface.py  cuda_graph.py  decorators.py  monitor.py  partition_rules.py  piecewise_backend.py  wrapper.py
cfie/config/: __init__.py  attention.py  cache.py  cfie.py  compilation.py  defaults.py  device.py  ec_transfer.py  kernel.py  kv_events.py  kv_transfer.py  load.py  lora.py  model.py  model_arch.py  multimodal.py  observability.py  offload.py  parallel.py  pooler.py  profiler.py  (+8 more)
cfie_training/: __init__.py  __main__.py  blueprint.py  config.py  predictor_blueprint.py
cmake/: utils.cmake
csrc/: cache.h  cache_kernels.cu  cuda_vec_utils.cuh  cuda_view.cu  cumem_allocator.cpp  custom_all_reduce.cu  dispatch_utils.h  fused_qknorm_rope_kernel.cu  ops.h  sampler.cu  topk.cu  torch_bindings.cpp  windows_cuda_compat.h  windows_triton_compat_ops.cpp
docs/: 00_文档导航.md  122B_predictor_CLI_smoke.md  architecture.md  config_reference.md  代码注释工作文档.md
scripts/: benchmark_predictor_mtp.py  benchmark_qwen35_mtp.py  build_public_domain_predictor_dataset.py  sync_vllm_snapshot.sh  test_predictor_openai.py  test_predictor_server.py  vllm_dependency_audit.py
(+1063 files in other folders)
