[build-system]
requires = [
    "cmake>=3.26.1",
    "ninja",
    "packaging>=24.2",
    "setuptools>=77.0.3,<81.0.0",
    "torch == 2.10.0",
    "wheel",
    "jinja2>=3.1.6",
]
build-backend = "setuptools.build_meta"

[project]
name = "cfie"
version = "0.1.0"
description = "Capacity-First Inference Engine (CFIE)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = []

[project.scripts]
cfie = "cfie.cli.main:main"
cfie-train = "cfie_training.cli.main:main"

[tool.setuptools.packages.find]
include = ["cfie*", "cfie_training*", "vllm*"]

[tool.setuptools.package-data]
"cfie" = ["*.so", "*.abi3.so", "*.pyd", "*.dll"]
"cfie.cfie_flash_attn" = ["*.so", "*.abi3.so", "*.pyd", "*.dll"]
"cfie.vllm_flash_attn" = ["*.so", "*.abi3.so", "*.pyd", "*.dll"]
